# linear_system_modp_solver

./: README.md  matrix.txt  pyproject.toml
docs/: index.html
lin_sys_mod_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
solver/: __init__.py  __main__.py  alg.py  cli.py
tests/: test_alg.py
