[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lin-sys-mod-solver"
version = "0.1.1"
description = "Solver for linear systems modulo a prime"
authors = [ { name = "ienei" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
lin-sys-mod = "solver.cli:main"
